Resetting multi-button value does not work when active button value is the same #89996

Closed
opened 2021-07-20 22:43:51 +02:00 by Hans Goudey · 21 comments
Member

System Information
Operating system: Linux-5.12.15-300.fc34.x86_64-x86_64-with-glibc2.33 64 Bits
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 465.31

Blender Version
Broken: version: 3.0.0 Alpha, branch: latest master
Worked: Caused by eb06ccc324

Short description of error
multi-button-reset.mp4

Exact steps for others to reproduce the error

  1. Find a vector exposed in the UI
  2. Set the first value to 0
  3. Set the second value to 1
  4. Drag down from the first button to edit all three values
  5. Type in 0
  6. Press enter
  7. Observe the bug
**System Information** Operating system: Linux-5.12.15-300.fc34.x86_64-x86_64-with-glibc2.33 64 Bits Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 465.31 **Blender Version** Broken: version: 3.0.0 Alpha, branch: latest master Worked: Caused by eb06ccc324 **Short description of error** [multi-button-reset.mp4](https://archive.blender.org/developer/F10230396/multi-button-reset.mp4) **Exact steps for others to reproduce the error** 1. Find a vector exposed in the UI 2. Set the first value to 0 3. Set the second value to 1 4. Drag down from the first button to edit all three values 5. Type in 0 6. Press enter 7. Observe the bug
Author
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly

#93207 was marked as duplicate of this issue

#93207 was marked as duplicate of this issue

#93132 was marked as duplicate of this issue

#93132 was marked as duplicate of this issue

#90514 was marked as duplicate of this issue

#90514 was marked as duplicate of this issue
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Author
Member

@filedescriptor This may be for you ; ) I expect the solution could be simple, it could check if there were multiple buttons selected and avoid using the optimization in that case.

@filedescriptor This may be for you ; ) I expect the solution could be simple, it could check if there were multiple buttons selected and avoid using the optimization in that case.

Added subscriber: @Florian-10

Added subscriber: @Florian-10

can confirm

can confirm
Falk David self-assigned this 2021-07-22 08:03:58 +02:00
Member

This will have to be tested in 2.93 LTS as well.

This will have to be tested in 2.93 LTS as well.
Author
Member

Added subscribers: @Pasang, @PratikPB2123, @APEC

Added subscribers: @Pasang, @PratikPB2123, @APEC
Member

Added subscriber: @mayedoge

Added subscriber: @mayedoge
Member

Added subscriber: @Andrew-Woods

Added subscriber: @Andrew-Woods

Added subscriber: @brecht

Added subscriber: @brecht

This looks like a significant regression, I think eb06ccc324 should be reverted for 3.0.

This looks like a significant regression, I think eb06ccc324 should be reverted for 3.0.
Member

@brecht I agree. Just to clarify though, in order to revert this change, I think we need to revert eb06ccc324, e1a9ba94c5, bbb52a462e, ec30cf0b74, and 071799d4fc. They are all fixes related to the initial commit (eb06ccc324) that was attempting to solve the core problem.

@brecht I agree. Just to clarify though, in order to revert this change, I think we need to revert eb06ccc324, e1a9ba94c5, bbb52a462e, ec30cf0b74, and 071799d4fc. They are all fixes related to the initial commit (eb06ccc324) that was attempting to solve the core problem.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Reverting would also get rid of another High prio bug: #90063 (Regression: Set curve radius does not work)

Reverting would also get rid of another High prio bug: #90063 (Regression: Set curve radius does not work)

This issue was referenced by 3bf10e5d0a

This issue was referenced by 3bf10e5d0ac297a70a9bc294fff0448e6b11fc20

In #89996#1259519, @filedescriptor wrote:
I think we need to revert eb06ccc324, e1a9ba94c5, bbb52a462e, ec30cf0b74, and 071799d4fc.

I looked over these commits, and I think we should disable few lines in ui_apply_but_NUM rather than reverting everything. I'll also leave a comment explaining how this may be implemented better.

> In #89996#1259519, @filedescriptor wrote: > I think we need to revert eb06ccc324, e1a9ba94c5, bbb52a462e, ec30cf0b74, and 071799d4fc. I looked over these commits, and I think we should disable few lines in `ui_apply_but_NUM` rather than reverting everything. I'll also leave a comment explaining how this may be implemented better.

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 3.0 milestone 2023-02-08 15:59:05 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89996
No description provided.